fixed FS on mobile

--- a/src/components/Styles/ForgotPassword.css
+++ b/src/components/Styles/ForgotPassword.css
@@ -14,3 +14,11 @@
     background-color: #666;
     color: #333;
 }
+@media only screen and (max-width: 480px) {
+
+    .container {
+        margin-top: 10rem ;
+        margin-bottom: 14rem;
+        height: 40vh;
+    }
+}
